--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "main": "./app/index.js",
   "homepage": "./",
   "scripts": {
-    "dev": "concurrently \"npm start\" \"wait-on http://localhost:3000 && electron ./app/\"",
+    "dev": "export ELECTRON_START_URL=http://localhost:3000 && concurrently \"npm start\" \"wait-on http://localhost:3000 && electron ./app/\"",
     "start": "react-scripts start",
     "start-win": "react-scripts start",
     "start-electron": "export ELECTRON_START_URL=http://localhost:3000 && electron ./app/",
